WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257139
[WGSL] EntryPointRewriter can't assume that return type is NamedTypeName
https://bugs.webkit.org/show_bug.cgi?id=257139
Summary
[WGSL] EntryPointRewriter can't assume that return type is NamedTypeName
Tadeu Zagallo
Reported
2023-05-22 11:07:35 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-05-22 11:08:24 PDT
<
rdar://problem/109668418
>
Tadeu Zagallo
Comment 2
2023-05-22 11:10:28 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14194
EWS
Comment 3
2023-05-23 00:13:15 PDT
Committed
264408@main
(4da294485bf1): <
https://commits.webkit.org/264408@main
> Reviewed commits have been landed. Closing PR #14194 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug