[WGSL] EntryPointRewriter can't assume that return type is NamedTypeName https://bugs.webkit.org/show_bug.cgi?id=257139 rdar://109668418

Reviewed by Dan Glastonbury.

In 264316@main I introduced an incorrect assertion in `EntryPointRewriter::checkReturnType`.
We can't assert that the return type is a `NamedTypeName` (i.e. an identifier that refers
to a type). Instead, we return early if the return type is of a different kind.

* Source/WebGPU/WGSL/EntryPointRewriter.cpp:
(WGSL::EntryPointRewriter::checkReturnType):

Canonical link: https://commits.webkit.org/264408@main